WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243599
Fix a parenting issue in the Adoption Agency Algorithm
https://bugs.webkit.org/show_bug.cgi?id=243599
Summary
Fix a parenting issue in the Adoption Agency Algorithm
Ryosuke Niwa
Reported
2022-08-05 12:16:25 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-08-05 12:21:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3053
Ryosuke Niwa
Comment 2
2022-08-05 12:25:52 PDT
<
rdar://97908900
>
EWS
Comment 3
2022-08-05 12:30:22 PDT
Committed
253155@main
(2e20c7f29e41): <
https://commits.webkit.org/253155@main
> Reviewed commits have been landed. Closing PR #3053 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug