Cherry-pick 2e20c7f29e41. rdar://problem/97908900

Fix a parenting issue in the Adoption Agency Algorithm
    https://bugs.webkit.org/show_bug.cgi?id=243599

    Reviewed by Chris Dumez.

    Exit early when the child-to-be contains the new parent.

    * Source/WebCore/html/parser/HTMLConstructionSite.cpp:
    (WebCore::executeReparentTask):
    (WebCore::executeInsertAlreadyParsedChildTask):

    Canonical link: https://commits.webkit.org/253155@main

Canonical link: https://commits.webkit.org/252432.333@safari-7614-branch